--- a/about.html
+++ b/about.html
@@ -47,24 +47,24 @@
         <h3 class="fw-semibold">Contact Us</h3>
         <p>If you have questions, feedback, or want to contribute, feel free to reach out below.</p>
 
-        <form class="mt-3" style="max-width: 600px;">
+        <form action="https://formspree.io/f/mpwrbvwb" method="POST" class="mt-3" id="contact-form">
           <div class="mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Your name" />
+            <input type="text" class="form-control" name="name" placeholder="Your name" required />
           </div>
 
           <div class="mb-3">
-            <label for="email" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="email" placeholder="name@example.com" />
+            <input type="email" class="form-control" name="email" placeholder="name@example.com" required />
           </div>
 
           <div class="mb-3">
-            <label for="message" class="form-label">Message</label>
-            <textarea class="form-control" id="message" rows="4" placeholder="Your message"></textarea>
+            <textarea class="form-control" name="message" rows="4" placeholder="Your message" required></textarea>
           </div>
 
           <button type="submit" class="btn btn-dark w-100">Submit</button>
         </form>
+
+        <!-- Response Message (hidden by default) -->
+        <div id="form-response" class="alert mt-3 d-none" role="alert"></div>
       </div>
     </div>
   </div>
@@ -79,5 +79,37 @@
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script type="module" src="js/aos-init.js"></script>
   <script src="js/renderer.js"></script>
+
+  <!-- Contact Form Script -->
+  <script>
+    const form = document.getElementById("contact-form");
+    const responseBox = document.getElementById("form-response");
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const formData = new FormData(form);
+
+      try {
+        const res = await fetch(form.action, {
+          method: "POST",
+          body: formData,
+          headers: { Accept: "application/json" }
+        });
+
+        if (res.ok) {
+          responseBox.classList.remove("d-none", "alert-danger");
+          responseBox.classList.add("alert-success");
+          responseBox.textContent = "✅ Message sent successfully!";
+          form.reset();
+        } else {
+          throw new Error();
+        }
+      } catch {
+        responseBox.classList.remove("d-none", "alert-success");
+        responseBox.classList.add("alert-danger");
+        responseBox.textContent = "⚠️ Failed to send. Please try again.";
+      }
+    });
+  </script>
 </body>
 </html>
