--- a/activity.html
+++ b/activity.html
@@ -7,9 +7,64 @@
 
   <!-- Styles -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
+
+  <!-- Custom Style Fixes -->
+  <style>
+    body {
+      background-color: #f5f7fa;
+    }
+
+    .sidebar {
+      background-color: #f9f9fb;
+      border-radius: 12px;
+      padding: 15px;
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
+    }
+
+    .filter label {
+      margin-top: 10px;
+    }
+
+    .filter select {
+      border-radius: 8px;
+      transition: border 0.2s ease;
+    }
+
+    .filter select:focus {
+      border-color: #0d6efd;
+      box-shadow: 0 0 4px rgba(13, 110, 253, 0.25);
+    }
+
+    #map {
+      height: 600px;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+      margin: 10px;
+    }
+
+    .footer {
+      background-color: #f1f3f5;
+      border-top: 1px solid #dee2e6;
+    }
+
+    .btn-group-responsive {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 0.5rem;
+      margin-top: 1.5rem;
+    }
+
+    #loading-indicator {
+      display: none;
+      text-align: center;
+      margin-top: 10px;
+      font-weight: bold;
+      color: #2D2E31;
+    }
+  </style>
 
   <!-- Map Scripts -->
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
@@ -21,11 +76,11 @@
   <div id="navbar" data-aos="fade-down"></div>
 
   <!-- Main Content -->
-  <div class="container-fluid mt-3">
+  <div class="container-fluid mt-3 px-4">
     <div class="row">
       <!-- Sidebar -->
       <div class="col-md-2 sidebar" data-aos="fade-right" data-aos-delay="100">
-        <div class="filter p-2">
+        <div class="filter">
           <label for="magnitude" class="form-label fw-bold">Magnitude</label>
           <select id="magnitude" class="form-select mb-3">
             <option>All</option>
@@ -53,25 +108,25 @@
 
       <!-- Map Area -->
       <div class="col-md-10" data-aos="zoom-in" data-aos-delay="200">
-        <div id="map" class="map" style="height: 600px;"></div>
-        <div id="loading-indicator" style="display:none; text-align:center; margin-top:10px; font-weight:bold; color:#2D2E31;">Loading data...</div>
+        <div id="map"></div>
+        <div id="loading-indicator">Loading data...</div>
       </div>
     </div>
   </div>
 
   <!-- Filter Buttons -->
-  <div class="text-center mt-4" data-aos="fade-up" data-aos-delay="300">
-    <button class="btn btn-outline-dark m-1">Last 100 Quakes</button>
-    <button class="btn btn-outline-dark m-1">Last Hour</button>
-    <button class="btn btn-outline-dark m-1">Last Day</button>
-    <button class="btn btn-outline-dark m-1">Last Week</button>
-    <button class="btn btn-outline-dark m-1">Last Month</button>
-    <button class="btn btn-outline-dark m-1">20 Years, Mag 5+</button>
-    <button class="btn btn-outline-primary m-1">Buffer Zone (100km)</button>
+  <div class="btn-group-responsive" data-aos="fade-up" data-aos-delay="300">
+    <button class="btn btn-outline-dark">Last 100 Quakes</button>
+    <button class="btn btn-outline-dark">Last Hour</button>
+    <button class="btn btn-outline-dark">Last Day</button>
+    <button class="btn btn-outline-dark">Last Week</button>
+    <button class="btn btn-outline-dark">Last Month</button>
+    <button class="btn btn-outline-dark">20 Years, Mag 5+</button>
+    <button class="btn btn-outline-primary">Buffer Zone (100km)</button>
   </div>
 
   <!-- Footer -->
-  <footer class="footer text-center py-3" data-aos="fade">
+  <footer class="footer text-center py-3 mt-4" data-aos="fade">
     <small>&copy; 2025 Seismic Tracker. All rights reserved.</small>
   </footer>
 
